changed hiearchie and edited the code